# market-regime-sniper

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_experiments.ipynb  02_supervised_regimes.ipynb
src/market_regime_sniper/: data.py  my_stats.py  pipeline.py  plot.py  sniper_strategy.py  spx.csv  ssa_utils.py
src/market_regime_sniper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
